...
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:text="@string/btn_login"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_forgotpassword"
        android:layout_width="match_parent"
...
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forgotpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
...
